objects/Product2.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SO_Brand__c</fullName>
        <label>Brand</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Model__c</fullName>
        <label>Model</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Level__c</fullName>
        <label>Stock Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Magento_URL_Key__c</fullName>
        <label>Magento URL Key</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SO_Magento_Thumbnail__c</fullName>
        <label>Magento Thumbnail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SO_Magento_Base_Image__c</fullName>
        <label>Magento Base Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SO_Magento_Small_Image__c</fullName>
        <label>Magento Small Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SO_Magento_Vanity_Name__c</fullName>
        <label>Magento Vanity Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>